# approximation1_qt

./: CMakeLists.txt  approximator.cpp  approximator.h  error.cpp  error.h  func.cpp  func.h  main.cpp  plotwidget.cpp  plotwidget.h  task1.cpp  task1.h  task2.cpp  task2.h
